Update print statement from 'Hello' to 'Goodbye'

--- a/pag-recusa-bafometro/index.html
+++ b/pag-recusa-bafometro/index.html
@@ -37,8 +37,8 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pego No Bafômetro? Nós Temos a solução| CNH em Dia Soluções</title>
-  <meta name="description" content="Recusou ou assoprou o bafômetro e tomou a multa, entenda o que fazer agora. Fale com a CNH em Dia Soluções e receba orientação clara, sem complicação." />
+  <title>Recusou ao Bafômetro? A Multa e a Suspensão podem ser evitadas | CNH em Dia Soluções</title>
+  <meta name="description" content="Recusou a fazer o bafômetro, saiba que há solução. A maioria das multas aplicadas não seguem o padrão pedido por lei. Para saber se a sua multa está indevida com chances de cancelamento, entre no site e nos contate" />
 
   <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
   <link rel="shortcut icon" href="/favicon.png">
@@ -1396,3 +1396,4 @@ E-mail: ${email}`;
   </script>
 </body>
 </html>
+
