Update greeting from 'Hello' to 'Goodbye'

--- a/pag-recusa-bafometro/index.html
+++ b/pag-recusa-bafometro/index.html
@@ -180,7 +180,7 @@
         180deg,
         rgba(11,18,32,.72) 0%,
         rgba(11,18,32,.38) 45%,
-        rgba(255,248,214,.92) 100%
+        rgba(0, 0, 0, 0.92) 100%
       );
       z-index: 1;
     }
@@ -1396,4 +1396,5 @@ E-mail: ${email}`;
   </script>
 </body>
 </html>
+
 
