--- a/pagina-multas-de-transito/index.html
+++ b/pagina-multas-de-transito/index.html
@@ -1196,7 +1196,7 @@
           <!-- FormSubmit (mantém o padrão) -->
           <input type="hidden" name="_subject" value="Nova solicitação de contato - MULTAS | CNH em Dia Soluções">
           <input type="hidden" name="_captcha" value="false">
-          <input type="hidden" name="_template" value="table">
+          <input type="hidden" name="_template" value="box">
 
           <!-- Tracking (preenchido via JS) -->
           <input type="hidden" name="cta_label" id="cta_label" value="">
@@ -1584,5 +1584,6 @@
   </script>
 </body>
 </html>
+
 
 
